@@ -3,20 +3,19 @@ import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final LinkedList<Task> history = new LinkedList<>();
+    private static final int MAX_HISTORY_SIZE = 10;
+    private final List<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
-        if (history.size() == 10) {
-            history.removeFirst(); // Удаляем самый старый элемент
+        if (history.size() == MAX_HISTORY_SIZE) {
+            history.remove(0);
         }
-        history.add(task); // Добавляем новый элемент в конец
+        history.add(task);
     }
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(history); // Возвращаем копию списка
+        return new ArrayList<>(history);
     }
 }
-
-
